Add analysis first dataset

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -85,7 +85,8 @@
    "outputs": [],
    "source": [
     "if PLATFORM == \"crazyflie\":\n",
-    "    exp_name = \"2021_07_08_stepper_fast\"; # new sweep, better pipeline\n",
+    "    #exp_name = \"2021_07_08_stepper_fast\"; # new sweep, better pipeline\n",
+    "    exp_name = \"2021_10_07_stepper\"\n",
     "    motors = \"all45000\"\n",
     "    snr = 5\n",
     "else:\n",
@@ -110,7 +111,8 @@
     "data_collector = DataCollector()\n",
     "backup_exists = data_collector.fill_from_backup(exp_name, mic_type, motors, snr)\n",
     "if not backup_exists: \n",
-    "    print('generate data using script generate_df_results.')"
+    "    print('generate data using script generate_df_results.')\n",
+    "print(data_collector.df.frequency.unique())"
    ]
   },
   {
@@ -132,6 +134,7 @@
     "\n",
     "kind = 'linear'\n",
     "df_matrix, df_dist, df_freq = data_collector.get_df_matrix()\n",
+    "print(df_freq)\n",
     "print(df_dist)\n",
     "\n",
     "# interpolation study\n",
@@ -144,7 +147,6 @@
     "    df = df.assign(magnitude_norm=df.magnitude/df.groupby('frequency').magnitude.transform('median'))\n",
     "    z_series = df.groupby(['frequency', 'distance']).magnitude_norm.median()\n",
     "    z = z_series.values\n",
-    "    print(z_series)\n",
     "    x = z_series.index.get_level_values('distance').values\n",
     "    y = z_series.index.get_level_values('frequency').values\n",
     "    interpolator2d = scipy.interpolate.interp2d(x, y, z, kind=kind)\n",
@@ -197,6 +199,7 @@
     "    #ax.set_title(f\"mic{mic_idx} original\")\n",
     "    #add_colorbar(fig, ax, im)\n",
     "    fig, ax = plt.subplots()\n",
+    "    fig.set_size_inches(10, 5)\n",
     "    im = pcolorfast_custom(ax, df_dist, df_freq, df_matrix[mic_idx])\n",
     "    ax.set_title(f\"mic{mic_idx} pruned\")\n",
     "    ax_all.plot(df_freq, np.nanmean(df_matrix[mic_idx], axis=1), label=f'mic{mic_idx}')\n",
@@ -482,6 +485,7 @@
     "    #'calibration-offline-old': calib_function_old,\n",
     "}\n",
     "\n",
+    "print(df_freq)\n",
     "df_theory_pruned = get_df_theory(df_freq, df_dist)\n",
     "\n",
     "for j, (key, method) in enumerate(method_dict.items()):\n",
@@ -513,8 +517,8 @@
    "source": [
     "from plotting_tools import plot_df_matrix, save_fig, titles\n",
     "\n",
-    "min_freq = 3100 #min(df_freq)\n",
-    "max_freq = 5000 #max(df_freq)\n",
+    "min_freq = min(df_freq) #3100 #min(df_freq)\n",
+    "max_freq = max(df_freq) #5000 #max(df_freq)\n",
     "\n",
     "min_value = None\n",
     "max_value = None\n",
@@ -611,8 +615,6 @@
     "distances_grid_m = distances * 1e-2\n",
     "distance_estimators = {}\n",
     "\n",
-    "print(df_dist)\n",
-    "\n",
     "with progressbar.ProgressBar(max_value=len(df_dist)) as p:\n",
     "    for i_d, distance in enumerate(df_dist):\n",
     "\n",
@@ -697,7 +699,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -798,10 +800,13 @@
     "        inf_machine.add_calibration_function(normalize_method)\n",
     "\n",
     "        for i_mic, mic_idx in enumerate(chosen_mics):\n",
-    "            distances_bayes, proba_bayes_norm, diff_bayes = inf_machine.do_inference(algorithm=\"bayes\", mic_idx=i_mic)\n",
+    "            distances_bayes, proba_bayes_norm, diff_bayes = inf_machine.do_inference(\n",
+    "                algorithm=\"bayes\", \n",
+    "                mic_idx=i_mic\n",
+    "            )\n",
     "            \n",
     "            inf_machine.plot(i_mic=i_mic, ax=axs_slice[i_mic], label=method, standardize=True,\n",
-    "                             ls=all_linestyles[i_method])\n",
+    "                             ls=all_linestyles[i_method])#marker='o')\n",
     "\n",
     "            distance_estimators[method].add_distribution(\n",
     "                diff_bayes * 1e-2, proba_bayes_norm, mic_idx\n",
@@ -813,7 +818,7 @@
     "                eps_normalize(proba_bayes_norm, eps=eps),\n",
     "                color=f\"C{i_method}\",\n",
     "                ls=all_linestyles[i_method],\n",
-    "                label=method\n",
+    "                label=method,\n",
     "            )\n",
     "            axs_algo[i_mic].axvline(x=d, color=f\"C{i_method}\", ls=\":\") \n",
     "            axs_algo[i_mic].set_title(f\"mic{mic_idx}\")\n",
@@ -863,7 +868,8 @@
     "        distance_estimators.items()\n",
     "    ):\n",
     "\n",
-    "        distance_m_here = None if use_uniform_prior else distance * 1e-2\n",
+    "        # doesn't work with uniform prior!!\n",
+    "        distance_m_here = distance * 1e-2\n",
     "        angles, proba = distance_estimator.get_angle_distribution(\n",
     "            distance_estimate_m=distance_m_here,\n",
     "            azimuths_deg=np.arange(360),\n",
