--- a/python/CleanupAnalysis.ipynb
+++ b/python/CleanupAnalysis.ipynb
@@ -41,13 +41,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_name = \"2021_07_08_stepper_fast\";  # new hardware, new sweep\n",
+    "exp_name = \"2021_10_07_stepper\";  # new hardware, new sweep\n",
+    "#exp_name = \"2021_07_08_stepper_fast\";  # new hardware, new sweep\n",
     "#exp_name = \"2021_07_08_stepper_slow\";  # new hardware, new sweep\n",
     "#exp_name = \"2021_07_27_epuck_wall\";  # new hardware, new sweep\n",
     "# new buzzer\n",
     "\n",
     "motors = \"all45000\"\n",
-    "bin_selection = 6\n",
+    "bin_selection = 5\n",
     "\n",
     "#motors = \"sweep_and_move\" \n",
     "#bin_selection = 0\n",
@@ -106,6 +107,7 @@
    "source": [
     "from frequency_analysis import get_spectrogram_raw\n",
     "spec, freqs = get_spectrogram_raw(data.frequencies_matrix, data.stft)\n",
+    "print(len(freqs))\n",
     "fig, ax = plt.subplots()\n",
     "for i in range(spec.shape[2]):\n",
     "    ax.scatter(freqs[freqs>0], spec[freqs>0, 0, i], label=f'sweep{i}')\n",
@@ -317,7 +319,7 @@
     "    for i in range(matrix.shape[0]):\n",
     "        plot_df_matrix(dists, freqs[freqs>0], matrix[i, freqs>0], ax=axs[i])\n",
     "        axs[i].set_title(f\"mic{i}\")\n",
-    "        axs[i].set_ylim(2500, 4500)\n",
+    "        axs[i].set_ylim(3000, 4505)\n",
     "    return fig, axs\n",
     "\n",
     "fig, axs = plot_matrices(dists, freqs, matrix)\n",
