Finish new analysis

--- a/python/WallPreAnalysis.ipynb
+++ b/python/WallPreAnalysis.ipynb
@@ -87,13 +87,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# for 30 cm hovering dataset: drone unstable for first 4-5 sweeps, need to take this into account!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Calibration study"
    ]
   },
@@ -1040,7 +1033,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -1059,6 +1052,8 @@
     "azimuth_deg = WALL_ANGLE_DEG\n",
     "n_calib = 5\n",
     "n_window = 3\n",
+    "bad_freqs = []\n",
+    "#bad_freqs = [[3500, 3900]]\n",
     "\n",
     "plot_dict = [\n",
     "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_1\"},\n",
@@ -1069,10 +1064,9 @@
     "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_6\"},\n",
     "]\n",
     "\n",
-    "#errors_df = pd.DataFrame(\n",
-    "#    columns=[\"algorithm\", \"mics\", \"calib_method\", \"estimates\", \"distances\", \"appendix\", \"time\"]\n",
-    "#)\n",
-    "\n",
+    "errors_df = pd.DataFrame(\n",
+    "    columns=[\"algorithm\", \"mics\", \"calib_method\", \"estimates\", \"distances\", \"appendix\", \"time\"]\n",
+    ")\n",
     "\n",
     "calib_method_list = [\"on_the_fly\"] #\"stepper\"]\n",
     "# mic_list = [[0], [1], [2], [3]]\n",
@@ -1097,13 +1091,14 @@
     "    fig_calib.set_size_inches(10, 3)\n",
     "    axs_calib[0].set_ylabel(f\"amplitude [-]\")\n",
     "    for m in range(4):\n",
-    "        axs_calib[m].plot(yvalues, values_unsorted[:n_calib, m, :].T, color=f\"C{m}\")\n",
+    "        axs_calib[m].plot(yvalues, values_unsorted[:n_calib, m, :].T, color=f\"C{m}\", marker='o')\n",
     "        axs_calib[m].set_title(f\"mic{m}\")\n",
     "        axs_calib[4].errorbar(yvalues, calib_values[m], std_values[m], label=f\"mic{m}\")\n",
     "        axs_calib[m].set_xlabel(f\"frequency [Hz]\")\n",
     "    axs_calib[4].set_xlabel(f\"frequency [Hz]\")\n",
     "    axs_calib[4].set_title(f\"all mics\")\n",
     "    axs_calib[0].set_ylim(2, 12)\n",
+    "    [axs_calib[0].axvline(f, color='black') for fs in bad_freqs for f in fs]\n",
     "    save_fig(fig_calib, plot_name_calib)\n",
     "\n",
     "    # values = np.random.rand(len(yvalues))\n",
@@ -1154,17 +1149,17 @@
     "                # inf_machine.add_data(values_theo[:, :, i], yvalues_theo)\n",
     "                \n",
     "                # TODO(FD) figure out if below helps\n",
-    "                if False: #i < (len(xvalues) - 1):\n",
-    "                    rel_dist = xvalues[i+1] - xvalues[i]\n",
-    "                else:\n",
-    "                    rel_dist = 2\n",
+    "                #if i < (n_points - 1):\n",
+    "                #    rel_dist = xvalues[i+1] - xvalues[i]\n",
+    "                #else:\n",
+    "                rel_dist = 2\n",
     "                inf_machine.add_data(\n",
     "                    values_unsorted_calib[i],\n",
     "                    yvalues,\n",
-    "                    distances=-np.linspace(0, rel_dist, len(yvalues)),\n",
+    "                    #distances=-np.linspace(0, rel_dist, len(yvalues)),\n",
     "                )\n",
     "                # TODO(FD) check again if this helps...\n",
-    "                # inf_machine.filter_out_freqs(freq_ranges=[[3600, 3900]])\n",
+    "                inf_machine.filter_out_freqs(freq_ranges=bad_freqs)\n",
     "\n",
     "                inf_machine.add_geometry([dists_cm[0], dists_cm[-1]], WALL_ANGLE_DEG)\n",
     "                \n",
@@ -1221,10 +1216,35 @@
     "            }\n",
     "            fig, ax = plot_matrix(dists_cm, results_matrix_moving, d_estimates_moving)\n",
     "            save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#fname = '../experiments/2021_10_12_flying/results.pkl'\n",
-    "#results_df.to_pickle(fname)\n",
+    "#errors_df.to_pickle(fname)\n",
     "#print('saved as', fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_random(axs, dists):\n",
+    "    np.random.seed(1)\n",
+    "    errors_rand = []\n",
+    "    for d in dists:\n",
+    "        d_rand = np.random.choice(range(7, 100))\n",
+    "        errors_rand.append(d_rand - d)\n",
+    "    axs[0].plot(dists, errors_rand, color='k', label='random', ls='', marker='x', markersize=2)\n",
+    "    axs[1].plot(sorted(np.abs(errors_rand)), np.linspace(0, 1, len(errors_rand)), color='k', ls='', label='random', marker='x', markersize=2)\n",
+    "    axs[1].legend(loc='lower right')"
    ]
   },
   {
@@ -1235,13 +1255,20 @@
    },
    "outputs": [],
    "source": [
+    "from plotting_tools import plot_performance, save_fig\n",
+    "\n",
+    "exp_name = '2021_10_12_flying'\n",
+    "fname = f'../experiments/{exp_name}/results.pkl'\n",
+    "errors_df = pd.read_pickle(fname)\n",
+    "\n",
+    "chosen_mics = '[0,1,2,3]'\n",
+    "\n",
+    "filtered_df = errors_df.loc[errors_df.mics==chosen_mics]\n",
     "groupby = ['mics', 'algorithm']\n",
     "\n",
     "total_err_dict = {}\n",
-    "for j, (labels, df) in enumerate(errors_df.groupby(groupby, sort=False)):\n",
+    "for j, (labels, df) in enumerate(filtered_df.groupby(groupby, sort=False)):\n",
     "    params = dict(zip(groupby, labels))\n",
-    "    if not 'win' in params['algorithm']:\n",
-    "        continue \n",
     "        \n",
     "    err_dict = {}\n",
     "    dist_dict = {}\n",
@@ -1265,12 +1292,15 @@
     "    title = ''\n",
     "    for k,l in params.items():\n",
     "        title = f\"{title} {k}: {l}\"\n",
+    "\n",
     "    fig, axs = plot_performance(err_dict, xs_dict=dist_dict, xlabel=\"distance [cm]\", ylabel=\"error [cm]\")\n",
+    "    plot_random(axs, range(10, 80))\n",
     "    #fig, axs = plot_performance(err_dict, xlabel=\"distance [cm]\", ylabel=\"error [cm]\")\n",
     "    fig.suptitle(title)\n",
     "    axs[0].get_legend().set_visible(False)\n",
     "    axs[0].set_ylim(-60, 60)\n",
-    "    axs[1].set_xlim(-2, 60)"
+    "    axs[1].set_xlim(-2, 60)\n",
+    "    save_fig(fig, f'plots/experiments/{exp_name}_{chosen_mics}_{params[\"algorithm\"]}_cdf.pdf')"
    ]
   },
   {
@@ -1279,35 +1309,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots()\n",
-    "fig.set_size_inches(10, 10)\n",
-    "#ls = itertools.cycle(['-',':', '-.', '--'])\n",
-    "\n",
-    "mics_list = errors_df.mics.unique()\n",
-    "\n",
-    "handle1,  = ax.plot([], [], ls=':', color=f'C0')\n",
-    "handle2,  = ax.plot([], [], ls='-', color=f'C0')\n",
-    "handles = []\n",
-    "labels = []\n",
+    "max_dist = 40\n",
+    "err_dict = {}\n",
+    "dist_dict = {}\n",
     "for total_dict in total_err_dict.values():\n",
-    "    idx = np.where(total_dict['mics'] == mics_list)[0][0]\n",
-    "    if 'bayes' in total_dict['algorithm']:\n",
-    "        ls = '-'\n",
-    "        label = total_dict['mics']\n",
-    "    else:\n",
-    "        ls = ':'\n",
-    "        label = None\n",
-    "    handle, = ax.plot(np.sort(np.abs(err_list)), np.linspace(0, 1, len(err_list)), label=label, ls=ls, color=f'C{idx}')\n",
-    "    handles.append(handle)\n",
-    "    err_list = total_dict['errors']\n",
-    "l1 = ax.legend(handles=handles, labels=labels, loc='upper left', bbox_to_anchor=[1, 0.8], title='mics')\n",
-    "ax.add_artist(l1)\n",
-    "ax.legend(handles=[handle1, handle2], labels=['cost', 'bayes'], loc='lower left', bbox_to_anchor=[1, 0.8], title='algorithm')\n",
-    "\n",
-    "#fig, axs = plot_performance(total_err_dict, xs_dict=total_dist_dict, xlabel=\"distance [cm]\", ylabel=\"error [cm]\")\n",
-    "#axs[0].get_legend().set_visible(False)\n",
-    "#axs[1].legend(loc='upper left', bbox_to_anchor=[1, 1])"
+    "    key = total_dict['algorithm']\n",
+    "    errors = total_dict['errors']\n",
+    "    dists = total_dict['distances']\n",
+    "    err_dict[key] = errors[dists < 40]\n",
+    "    dist_dict[key] = dists[dists < 40]\n",
+    "    \n",
+    "fig, axs = plot_performance(err_dict, xs_dict=dist_dict, xlabel=\"distance [cm]\", ylabel=\"error [cm]\", marker_flag=False)\n",
+    "axs[0].get_legend().set_visible(False)\n",
+    "plot_random(axs, range(10, max_dist))\n",
+    "fig.suptitle(f'overall performacne mics {chosen_mics} up to {max_dist}cm')\n",
+    "save_fig(fig, f'plots/experiments/{exp_name}_{chosen_mics}_cdf.pdf')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1322,6 +1353,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
